# ininfra

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Cargo.toml
apps/api/src/: argo.rs  auth.rs  config.rs  conv.rs  db.rs  dto.rs  ecr.rs  error.rs  gateway_log.rs  k8s.rs  loki.rs  main.rs  monitor.rs  observe.rs  perms.rs  settings.rs
apps/api/src/routes/: audit.rs  auth.rs  build_config.rs  builds.rs  capacity.rs  deploy.rs  deployments.rs  describe.rs  drift.rs  env.rs  errors.rs  events.rs  favorites.rs  gateway.rs  hpa.rs  jobs.rs  logs.rs  manifest.rs  mod.rs  nodes.rs  pods.rs  pvc.rs  rbac.rs  rightsizing.rs  search.rs  secrets.rs  services.rs  setup.rs  statefulsets.rs  status.rs  topology.rs  users.rs
apps/web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/audit/: page.tsx
apps/web/app/branches/: page.tsx
apps/web/components/: ActiveBuildIndicator.tsx  AuditPageClient.tsx  AuditTable.tsx  Brand.tsx  BuildTriggerForm.tsx  CommandPalette.tsx  ConfigProvider.tsx  DashboardClient.tsx  DescribePanel.tsx  DriftPanel.tsx  EnvObjectEditor.tsx  ErrorPanel.tsx  FavoriteStar.tsx  FavoritesProvider.tsx  InlineEnvViewer.tsx  JenkinsGate.tsx  KubectlMenu.tsx  LanguageToggle.tsx  LogViewer.tsx  ManifestViewer.tsx  Masthead.tsx  Pager.tsx  PodDescribeButton.tsx  PodsTable.tsx  ScaleControls.tsx  ServiceCard.tsx  Shell.tsx  Sidebar.tsx  StatusBadge.tsx  Toast.tsx  TopologyPanel.tsx  ui.tsx
apps/web/lib/: api.ts  config.ts  format.ts  i18n.tsx  palette.ts  routes.ts  search-kind.tsx  server-api.ts  use-debounced-value.ts
db/migrations/: 0001_init.sql  0002_users.sql  0003_error_events.sql  0004_status_events.sql  0005_favorites.sql  0006_gateway_errors.sql  0007_gateway_requests.sql  0008_gateway_request_identity.sql  0009_k8s_events.sql  0010_rbac.sql  0011_settings.sql
deploy/: Dockerfile.api  Dockerfile.web  README.md
deploy/k8s/: 00-namespace.yaml  10-rbac.yaml  20-postgres.yaml  30-api.yaml  40-web.yaml  50-ingress.yaml
docs/: 404.html  CONFIGURATION.md  INSTALL.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html
docs/404/: index.html
docs/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
site/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/components/: AnimatedTerminal.tsx  CodeBlock.tsx  Reveal.tsx  Wordmark.tsx
site/components/sections/: Architecture.tsx  ConsoleShowcase.tsx  Demo.tsx  FeatureGallery.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Quickstart.tsx  Security.tsx  TrustStrip.tsx
site/components/ui/: Button.tsx  Card.tsx  Kicker.tsx  SectionHeading.tsx
site/lib/: base.ts  content.ts
(+42 files in other folders)
